--- a/application/views/scripts/home/months.phtml
+++ b/application/views/scripts/home/months.phtml
@@ -61,7 +61,7 @@
                 <input type="text" class="form-control" style="width:49%; float:left;" id="descPatrick" placeholder="Beschreibung" />
                 <input type="text" class="form-control validateInputValue" style="width:49%; margin-left:2px; float:left;" id="valuePatrick" placeholder="Betrag" />
             </td>
-            <td><button class="btn btn-default addValuePatrick">Hinzufügen</button></td>
+            <td><button class="btn btn-primary addValuePatrick">Hinzufügen</button></td>
         </tr>
             <tr>
                 <td>Gesamter Wert</td>
@@ -93,7 +93,7 @@
                     <input type="text" class="form-control" style="width:49%; float:left;" id="descTini" placeholder="Beschreibung" />
                     <input type="text" class="form-control validateInputValue" style="width:49%; margin-left:2px; float:left;" id="valueTini" placeholder="Betrag" />
                 </td>
-                <td><button class="btn btn-default addValueTini">Hinzufügen</button></td>
+                <td><button class="btn btn-primary addValueTini">Hinzufügen</button></td>
             </tr>
             <tr>
                 <td>Gesamter Wert</td>
