--- a/application/views/scripts/users/login.phtml
+++ b/application/views/scripts/users/login.phtml
@@ -3,7 +3,7 @@
 	<div class="col-md-4">
 		<div class="panel">
 		  	<div class="panel-heading">
-		  		<p class="panel-title">Login</p>
+		  		<p class="panel-title"><span class="glyphicon glyphicon-lock"></span> Login</p>
 		 	</div>
 		  	<div class="panel-body">
 				<form role="form" method="post">
