--- a/application/views/scripts/home/months.phtml
+++ b/application/views/scripts/home/months.phtml
@@ -65,7 +65,7 @@
         <tbody>
             <?php foreach($moneyEntryPatrick as $key => $moneyEntry): ?>
                 <tr>
-                    <td><span style="float:left; cursor:pointer;" class="glyphicon glyphicon-remove removeMoneyEntry" aria-hidden="true" id="<?php echo $this->escape($moneyEntry['id']) ?>"></span><?php echo $this->escape($moneyEntry['description']) ?></td>
+                    <td><span style="float:left; cursor:pointer;" class="glyphicon glyphicon-remove removeMoneyEntry" aria-hidden="true" data-userId="1" id="<?php echo $this->escape($moneyEntry['id']) ?>"></span><?php echo $this->escape($moneyEntry['description']) ?></td>
                     <td><?php echo $this->escape($moneyEntry['value']) ?></td>
                 </tr>
             <?php endforeach; ?>
@@ -96,7 +96,7 @@
         <tbody>
         <?php foreach($moneyEntryTini as $key => $moneyEntry): ?>
             <tr>
-                <td><span style="float:left; cursor:pointer;" class="glyphicon glyphicon-remove removeMoneyEntry" aria-hidden="true" id="<?php echo $this->escape($moneyEntry['id']) ?>"></span><?php echo $this->escape($moneyEntry['description']) ?></td>
+                <td><span style="float:left; cursor:pointer;" class="glyphicon glyphicon-remove removeMoneyEntry" aria-hidden="true" data-userId="2" id="<?php echo $this->escape($moneyEntry['id']) ?>"></span><?php echo $this->escape($moneyEntry['description']) ?></td>
                 <td><?php echo $this->escape($moneyEntry['value']) ?></td>
             </tr>
         <?php endforeach; ?>
@@ -118,7 +118,7 @@
     </table>
 </div>
 
-<div>
+<div style="display: inline-block; width: 808px;">
     <?php if($valuePatrick > $valueTini): ?>
         <span>Tini schuldet Patrick (dieser Monat): <?php echo $debts ?>&euro;</span>
     <?php elseif($valueTini > $valuePatrick): ?>
@@ -126,10 +126,16 @@
     <?php endif ?>
 </div>
 
-<div>
+<div class="debtsPayArea">
     <?php if($valuePatrickAll > $valueTiniAll): ?>
         <span>Tini schuldet Patrick (insgesamt): <?php echo $debtsAll ?>&euro;</span>
+        <button class="btn btn-primary debtsPayBtn">Hinzufügen</button>
+        <input type="text" data-fromTo="TiniToPatrick" class="form-control validateInputValue" id="debtsPayInput" placeholder="Betrag" />
     <?php elseif($valueTiniAll > $valuePatrickAll): ?>
         <span>Patrick schuldet Tini (insgesamt): <?php echo $debtsAll ?>&euro;</span>
+        <button class="btn btn-primary debtsPayBtn">Hinzufügen</button>
+        <input type="text" data-fromTo="PatrickToTini" class="form-control validateInputValue" id="debtsPayInput" placeholder="Betrag" />
+    <? else: ?>
+        <span>Keine Schulden offen.</span>
     <?php endif ?>
 </div>
