--- a/public/internal/css/styles.css
+++ b/public/internal/css/styles.css
@@ -116,9 +116,22 @@ body{
     text-align:center;
 }
 
-/*
-.btn-default{
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-}*/
+.debtsPayArea{
+    display: inline-block;
+    width: 808px;
+    padding-top: 10px;
+    margin-top: 20px;
+    border-top: 1px solid black;
+}
+
+.debtsPayArea input{
+    width:350px;
+    margin-right:10px;
+    float:right;
+}
+
+.debtsPayBtn{
+    float:right;
+}
+
+
