--- a/public/internal/css/styles.css
+++ b/public/internal/css/styles.css
@@ -141,6 +141,11 @@ body{
     text-align:center;
 }
 
+.debtsArea{
+    display: inline-block;
+    width: 808px;
+}
+
 .debtsPayArea{
     display: inline-block;
     width: 808px;
